--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,14 @@ input, select, textarea {
 		font-size: 13pt;
 	}
 
+    li, p {
+        font-size: 16pt;
+    }
+
+    .contact-icon {
+        vertical-align: middle;
+    }
+    
 	a {
 		-moz-transition: color .2s ease-in-out;
 		-webkit-transition: color .2s ease-in-out;
@@ -1761,7 +1769,7 @@ input, select, textarea {
             }
 
 		ul li {
-			padding-left: 0.5em;
+			padding-right: 0.8em;
 		}
 
 	ol {
@@ -2271,7 +2279,7 @@ input, select, textarea {
 
 			body, input, textarea, select {
 				line-height: 1.75em;
-				font-size: 10pt;
+				font-size: 16pt;
 				letter-spacing: 0;
 			}
             
