--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,7 +102,7 @@ input, select, textarea {
 		font-size: 13pt;
 	}
 
-    li, p {
+    .dual-columns li, p {
         font-size: 16pt;
     }
 
@@ -1271,6 +1271,13 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
+            #guru-subheader {
+                line-height: 1;
+            }
+
+            #about-nav-link {
+                display: none !important;
+            }
 			.row {
 				display: flex;
 				flex-wrap: wrap;
